# chip-lang

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  setup-dev-environment
.cargo/: config.toml
.github/workflows/: ci.yml
compiler/chipc-arena/: Cargo.toml
compiler/chipc-ast/: Cargo.toml  build.rs  (+2 more)
compiler/chipc-ast-lowering/: Cargo.toml
compiler/chipc-ast-lowering/src/: lib.rs
compiler/chipc-ast-lowering/tests/: snapshot.rs
compiler/chipc-ast-lowering/tests/snapshots/: snapshot__main@attributes.snap  snapshot__main@empty.snap  snapshot__main@extern.snap  snapshot__main@literals.snap  snapshot__main@simple.snap
compiler/chipc-codegen/: Cargo.toml  build.rs
compiler/chipc-codegen/include/: chipc-codegen.hpp
compiler/chipc-codegen/src/: lib.cpp  lib.rs
compiler/chipc-codegen/tests/llvm_ir/: main.rs
compiler/chipc-codegen/tests/llvm_ir/snapshots/: llvm_ir__main@attributes.snap  llvm_ir__main@empty.snap  llvm_ir__main@extern.snap  llvm_ir__main@literals.snap  llvm_ir__main@simple.snap
compiler/chipc-codegen/tests/object/: answer.chip  answer.rs  main.rs  symbol_exists.chip  symbol_exists.rs
compiler/chipc-grammar/: Cargo.toml  grammar.js  package.json
compiler/chipc-grammar/bindings/node/: binding.cc
compiler/chipc-grammar/bindings/rust/: lib.rs
compiler/chipc-grammar/src/: grammar.json  node-types.json  parser.c
compiler/chipc-grammar/tests/snapshot/: main.rs
compiler/chipc-grammar/tests/snapshot/cases/: extern.chip  simple.chip
compiler/chipc-grammar/tests/snapshot/snapshots/: snapshot__main@attributes.chip.snap  snapshot__main@empty.chip.snap  snapshot__main@extern.chip.snap  snapshot__main@literals.chip.snap  snapshot__main@simple.chip.snap
tests/harness/: Cargo.toml
tests/harness/src/: lib.rs  nextest.rs
tree-sitter/: Cargo.toml  grammar.js  package.json
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/rust/: lib.rs
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/tests/: snapshot.rs
tree-sitter/tests/snapshots/: snapshot__main@attributes.chip.snap  snapshot__main@attributes.snap  snapshot__main@empty.chip.snap  snapshot__main@empty.snap  snapshot__main@extern.chip.snap  snapshot__main@extern.snap  snapshot__main@literals.chip.snap  snapshot__main@literals.snap  snapshot__main@simple.chip.snap  snapshot__main@simple.snap
xtask/: Cargo.toml
(+92 files in other folders)
