[package]
name = "tree-sitter-chip"
version = "0.0.0"
edition = "2021"
publish = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"
harness = false

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
chip-snapshot-tests = { path = "../tests/snapshot" }
