[package]
name = "chipc-ast-lowering"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
chipc-ast = { path = "../chipc-ast" }
chipc-arena = { path = "../chipc-arena" }
chipc-hir = { path = "../chipc-hir" }

[dev-dependencies]
chip-test-harness = { path = "../../tests/harness" }
chip-snapshot-tests = { path = "../../tests/snapshot" }

[[test]]
name = "snapshot"
harness = false
