[package]
name = "chipc-grammar"
version = "0.0.0"
edition = "2021"
publish = false
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot/main.rs"
harness = false

[build-dependencies]
cc = "1"

[dev-dependencies]
insta = { version = "1.13.0", features = ["glob"] }

[dependencies]
tree-sitter = "0.20.6"
