[package]
name = "chip-test-harness"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.16"

[dependencies.syn]
version = "1.0.89"
default-features = false
features = ["full", "parsing", "printing", "proc-macro"]
